# audio_convert

./: .gitignore  README.md  pyproject.toml
src/audio_convert/: __init__.py  __main__.py  cli.py  convert.py  convertDirectory_m4v_to_mp4.py  convertFiles_divx_to_mp4.py  convertFiles_mp3_to_mp3.py  utils.py
src/audio_convert/templates/: flac_to_mp3.py
